updated tex files

--- a/docs/latex/00-TesisMC.tex
+++ b/docs/latex/00-TesisMC.tex
@@ -58,6 +58,9 @@
 %para incluir archivos SVG
 \usepackage{svg}
 
+%para incluir links
+\usepackage{hyperref}
+
 
 %##############################################################################
 % para renombrar algunos títulos
@@ -272,7 +275,7 @@
 % los puntos .tex van sin preámbulo, es decir que sólo va el texto correspondiente y las instrucciones para definir título, secciones, subsecciones, tablas, etc.
 \include{agradecimiento}
 \include{dedicatoria}
-\include{resumen}
+\include{001-resumen}
 
 % por si quieres incuir hasta un tercer nivel en la tabal de contenidos
 %\setcounter{tocdepth}{3}
