--- a/docs/latex/05-Experimentos.tex
+++ b/docs/latex/05-Experimentos.tex
@@ -1,11 +1,11 @@
 \chapter{Configuración experimental y resultados}
-En este capítulo se presenta la configuración experimental y el detalle de los conjuntos de datos empleados, además de los parámetros elegidos para la construcción de los diferentes clasificadores para la evaluación del método propuesto.
+En este capítulo se presenta la configuración experimental y el detalle de los conjuntos de datos empleados, además de los parámetros elegidos para la construcción de los diferentes clasificadores para la evaluación del método propuesto, al final se presenta un análisis de los resultados y se comparan las diferentes estrategias de aumento de datos. Además para poder reproducir los resultados, este proyecto esta públicamente disponible en \href{https://github.com/v1ktop/data_augmentation_for_author_profiling}{github.com/v1ktop}.
 
 
 
 
-\input{sections/05-experimentos/configuracion_exp}
+\input{sections/05-experimentos/00-configuracion_exp}
 
-\input{sections/05-experimentos/resultados}
+\input{sections/05-experimentos/01-resultados}
 
-\input{sections/05-experimentos/analisis}
+\input{sections/05-experimentos/02-analisis}
