--- a/docs/latex/Bibliografia.bib
+++ b/docs/latex/Bibliografia.bib
@@ -1,3 +1,72 @@
+
+@article{beck1961inventory,
+  title={An inventory for measuring depression},
+  author={Beck, Aaron T and Ward, Calvin H and Mendelson, Mock and Mock, Jeremiah and Erbaugh, John},
+  journal={Archives of general psychiatry},
+  volume={4},
+  number={6},
+  pages={561--571},
+  year={1961},
+  publisher={American Medical Association}
+}
+
+@article{pennebaker2001linguistic,
+  title={Linguistic inquiry and word count: LIWC 2001},
+  author={Pennebaker, James W and Francis, Martha E and Booth, Roger J},
+  journal={Mahway: Lawrence Erlbaum Associates},
+  volume={71},
+  number={2001},
+  pages={2001},
+  year={2001}
+}
+
+@article{Abed-Esfahani2019,
+author = {Abed-Esfahani, Pegah and Howard, Derek and Maslej, Marta and Patel, Sejal and Mann, Vamika and Goegan, Sarah and French, Leon},
+file = {:D$\backslash$:/v1ktop/Documentos/Libros/ALotOfPapers/Transfer Learning for Depression Early Detection.pdf:pdf},
+issn = {16130073},
+journal = {CEUR Workshop Proceedings},
+keywords = {Depression,Natural language processing,Transfer learning},
+number = {September 2019},
+pages = {9--12},
+title = {{Transfer learning for depression: Early detection and severity prediction from social media postings}},
+volume = {2380},
+year = {2019}
+}
+
+
+@article{Burdisso2019,
+author = {Burdisso, Sergio G. and Errecalde, Marcelo and Montes-Y-G{\'{o}}mez, Manuel},
+file = {:D$\backslash$:/v1ktop/Documentos/Libros/ALotOfPapers/UNSL at eRisk 2019 a Unified Approach for.pdf:pdf},
+issn = {16130073},
+journal = {CEUR Workshop Proceedings},
+keywords = {Early Classification,Early Risk Detection,SS3,Text Classification,Text Streams Classification},
+pages = {9--12},
+title = {{UNSL at Erisk 2019: A Unified Approach for Anorexia, Self-harm and Depression Detection in Social Media}},
+volume = {2380},
+year = {2019}
+}
+
+
+@inproceedings{losada2019overview,
+  title={Overview of eRisk at CLEF 2019: Early Risk Prediction on the Internet (extended overview).},
+  author={Losada, David E and Crestani, Fabio and Parapar, Javier},
+  booktitle={CLEF (Working Notes)},
+  year={2019}
+}
+
+@article{Losada2019,
+author = {Losada, David E. and Crestani, Fabio and Parapar, Javier},
+doi = {10.1007/978-3-030-28577-7_27},
+isbn = {9783030285760},
+issn = {16113349},
+journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+pages = {340--357},
+title = {{Overview of eRisk 2019 Early Risk Prediction on the Internet}},
+volume = {11696 LNCS},
+year = {2019}
+}
+
+
 @misc{porter2001snowball,
   title={Snowball: A language for stemming algorithms},
   author={Porter, Martin F},
