--- a/docs/latex/sections/02-marco/05-metrics.tex
+++ b/docs/latex/sections/02-marco/05-metrics.tex
@@ -1,6 +1,6 @@
 \section{Medidas de Evaluación}
 
-Existen diferentes métricas para evaluar los modelos de aprendizaje computacional, dependiendo de lo que se quiera medir algunas de las más utilizadas son: exactitud, precisión, recuerdo y F1. Para ilustrar cada un de estas métricas, se parte de la clasificación binaria como ejemplo. La tabla \ref{table:confusion}, conocida como matriz de confusión, resume  los resultados de un clasificador.
+Existen diferentes métricas para evaluar los modelos de aprendizaje computacional, dependiendo de lo que se quiera medir algunas de las más utilizadas son: exactitud, precisión, recuerdo y F1. Para ilustrar cada un de estas métricas, se parte de la clasificación binaria como ejemplo. La tabla \ref{table:confusion}, conocida como matriz de confusión, resume  los resultados de un clasificador. A continuación se describen los principales conceptos\footnote{Tomados de https://medium.com/analytics-vidhya/complete-guide-to-machine-learning-evaluation-metrics-615c2864d916}.
 
 \begin{table}[ht]
 \caption{Matriz de confusión.}
@@ -17,7 +17,7 @@ Existen diferentes métricas para evaluar los modelos de aprendizaje computacion
 \end{table}
 
 
-La matriz de confusión no es una medida como tal, pero las métricas de evaluación están basados en los números dentro de ésta.
+La matriz de confusión no es una medida como tal, pero las métricas de evaluación están basados en los números dentro de esta.
 
 \textbf{Términos asociados a la matriz de confusión:}
 
