--- a/docs/latex/sections/figures/dist_data.tex
+++ b/docs/latex/sections/figures/dist_data.tex
@@ -4,14 +4,14 @@
     
     \begin{subfigure}[b]{0.5\textwidth}
         \includegraphics[width=\textwidth]{sections/figures/length_dist.eps}
-        \caption{Depresión}
+        \caption{Depresión 2018}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.5\textwidth}
         \includegraphics[width=\textwidth]{sections/figures/length_dist_anorexia.eps}
         \caption{Anorexia}
     \end{subfigure}
-    \caption{Distribución del numero de palabras en los conjuntos de datos estudiados}
+    \caption{Distribución del numero de palabras en los historiales de usuarios estudiados}
     \label{fig:erisk_freq}
 \end{figure}
 
