--- a/docs/latex/sections/tables/depresion_users_no_filter.tex
+++ b/docs/latex/sections/tables/depresion_users_no_filter.tex
@@ -1,5 +1,6 @@
 \begin{table}[!hbt]
-\caption{Número de usuarios en los conjuntos de datos y número de sub-documentos con 64 palabras después del pre-procesamiento, sin aplicar el filtro de sub-documentos.} \label{table:orginal_users}
+\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras después del pre-procesamiento, sin aplicar el filtro. Los números resaltados en negritas representan el numero de historiales comparado con el numero de secuencias.} \label{table:original_users}
+
 \begin{center}
 
 \begin{tabular}{llll}
@@ -9,27 +10,27 @@
 \rowcolor[HTML]{EFEFEF} 
 \textit{Conjunto 1: Depresión 2018}                         & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-deprimido                                                   & 135 - 31,396                                 & 79 - 25,967                                  &                                                              \\ \hline
+deprimido                                                   & \textbf{135} - 31,396                                 & \textbf{79} - 25,967                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-no-deprimido                                                & 752 - 227,189                                & 741 - 272,703                                &                                                              \\ \hline
+no-deprimido                                                & \textbf{752} - 227,189                                & \textbf{741} - 272,703                                &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                                              & \textit{887 - 138,232}                       & \textit{820 - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{202,151}} \\ \hline
+\textbf{Total}                                              & \textit{887 - 138,232}                       & \textit{\textbf{820} - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{202,151}} \\ \hline
 \rowcolor[HTML]{EFEFEF} 
 \cellcolor[HTML]{EFEFEF}\textit{Conjunto 2: Depresión 2019} &                                              &                                              &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-deprimido                                                   & 16 - 5,731                                   & 60 - 18,534                                  &                                                              \\ \hline
+deprimido                                                   & \textbf{16} - 5,731                                   & \textbf{60} - 18,534                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-no-deprimido                                                & 752 - 227,189                                & 10 - 5,011                                   &                                                              \\ \hline
+no-deprimido                                                & \textbf{752} - 227,189                                & \textbf{10} - 5,011                                   &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                                              & \textit{768 - 232,920}                       & \textit{70 - 23,545}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{195,047}}    \\ \hline
+\textbf{Total}                                              & \textit{\textbf{768} - 232,920}                       & \textit{\textbf{70} - 23,545}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{195,047}}    \\ \hline
 \rowcolor[HTML]{EFEFEF} 
 \textit{Conjunto 3: Anorexia}                               & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-con anorexia                                                & 61 - 23,335                                  & 73 - 16,751                                  &                                                              \\ \hline
+con anorexia                                                & \textbf{61} - 23,335                                  & 73 - 16,751                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-sin-anorexia                                                & 411 - 36,484                                 & 742 - 254,640                                &                                                              \\ \hline
+sin-anorexia                                                & \textbf{411} - 36,484                                 & \textbf{742} - 254,640                                &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                                              & \textit{472 - 130,574}                       & \textit{815 - 271,391}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{67,724}}  \\ \hline
+\textbf{Total}                                              & \textit{\textbf{472} - 130,574}                       & \textit{\textbf{815} - 271,391}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{67,724}}  \\ \hline
 \end{tabular}
 
 \end{center}
