--- a/docs/latex/sections/tables/ejemplos_contraria.tex
+++ b/docs/latex/sections/tables/ejemplos_contraria.tex
@@ -1,8 +1,8 @@
 \begin{table}[hbt!]
-\caption{Ejemplos del aumento de datos para el método basado en relaciones opuestas.} 
+\caption{Ejemplos del aumento de datos para el método basado en relaciones contrarias, las palabras resaltadas en negritas son las que resultaron afectadas después de la transformación.} 
 \label{table:ejemplos_contraria}
 \begin{center}
-
+\resizebox{\columnwidth}{!}{%
 \begin{tabular}{ll}
 \hline
 \rowcolor[HTML]{EFEFEF} 
@@ -10,16 +10,19 @@
 \rowcolor[HTML]{FFFFFF} 
 Sin Aumento     & i connected with a girl we sat up and talked all night       \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-Opuesta       & i disconnected with a girl we sat up and talked all night    \\ \hline
+(happiness, anxious)      & i \textbf{disconnected} with a girl we sat up and talked all night    \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-Opuesta       & i connected with a girl we sat up and complained all night   \\ \hline
+(happiness, frustrated)      & i connected with a girl we sat up and \textbf{complained} all night   \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-Opuesta       & i connected with a boy we complained up and talked all night \\ \hline
+(happiness, unhappy)       & i connected with a \textbf{boy} we \textbf{complained} up and talked all night \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-Opuesta       & i dispirited with a girl we sat up and talked all night      \\ \hline
+(happiness, despondent)       & i \textbf{dispirited} with a girl we sat up and talked all night      \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-Opuesta       & i connected with a shy we dismayed up and bothered all night \\ \hline
+(happiness, discouraged)       & i connected with a \textbf{shy} we \textbf{dismayed} up and \textbf{bothered} all night \\ \hline
 \end{tabular}
+}
 
 \end{center}
 \end{table}
+
+%"anxious", "frustrated", "unhappy", "despondent", "discouraged"
