--- a/docs/latex/sections/tables/param_redes.tex
+++ b/docs/latex/sections/tables/param_redes.tex
@@ -11,7 +11,7 @@ Tasa de aprendizaje     & 1.00E-03                 \\ \hline
 Tamaño del Batch        & 1024                     \\ \hline
 Función de perdida      & Entropia cruzada binaria \\ \hline
 Maximo número de epocas & 20                       \\ \hline
-Epocas de tolerancia    & CNN=6; Bi-LSTM=3     %Criterio de paro    \\ \hline
+Criterio de paro    & CNN=6; Bi-LSTM=3         \\ \hline
 Pruebas independientes  & 3                        \\ \hline
 \end{tabular}
 
