--- a/docs/latex/sections/02-marco/03-seleccion.tex
+++ b/docs/latex/sections/02-marco/03-seleccion.tex
@@ -5,10 +5,10 @@ Un problema común en la clasificación de textos es el manejo de grandes espaci
 Existen diversos métodos para seleccionar características entre los más utilizados se encuentran:
 
 \begin{enumerate}
-    \item Umbral de Frecuencia: Se mide para cada palabra $w$ del vocabulario, el número de documentos en que $w$ aparece. Aquellas palabras poco usadas, es decir, con pocos contextos de uso se eliminan. Es de esperar, que las palabras más frecuentes también aparezcan en documentos no vistos.
+    \item Umbral de Frecuencia: Se mide para cada palabra $w$ del vocabulario, el número de documentos en que $w$ aparece. Aquellas palabras poco usadas, es decir, con pocos contextos de uso se eliminan. Es de esperar, que las palabras más frecuentes también aparezcan en documentos no vistos \citep{yang1997comparative}.
     
-    \item Ganancia de información: Se establecen como relevantes todas aquellas palabras con una GI mayor a cero. Esta técnica tiene un sesgo muy importante respecto al conjunto de entrenamiento, sobretodo si éste es pequeño.  
-    \item Chi cuadrada: Es un test estadístico que mide la independencia entre un término $t$ y una clase $c$. Para cada término, una puntuación alta indica que la hipótesis nula de independencia debe ser rechazada y la ocurrencia del término y la clase son dependientes.
+    \item Ganancia de información: Se establecen como relevantes todas aquellas palabras con una GI mayor a cero. Esta técnica tiene un sesgo muy importante respecto al conjunto de entrenamiento, sobretodo si éste es pequeño \citep{yang1997comparative}.   
+    \item Chi cuadrada: Es un test estadístico que mide la independencia entre un término $t$ y una clase $c$. Para cada término, una puntuación alta indica que la hipótesis nula de independencia debe ser rechazada y la ocurrencia del término y la clase son dependientes \citep{yang1997comparative}.
 \end{enumerate}
 
 En \citep{yang1997comparative} se encuentra la definición matemática de cada uno de los métodos y \citep{forman2003extensive} presenta un análisis más extenso junto con otros métodos. 
