--- a/docs/latex/sections/tables/depresion_users_filter.tex
+++ b/docs/latex/sections/tables/depresion_users_filter.tex
@@ -1,6 +1,7 @@
 \begin{table}[!hbt]
-\caption{Número de usuarios en los conjuntos de datos y número de sub-documentos con 64 palabras después del pre-procesamiento, realizando el filtro de sub-documentos.} \label{table:filter_users}
-\begin{center}
+\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras después del pre-procesamiento, realizando el filtro. Los números resaltados en negritas representan el numero de historiales comparado con el numero de secuencias} \label{table:filter_users}
+
+\resizebox{\textwidth}{!}{%
 
 \begin{tabular}{llll}
 \hline
@@ -9,29 +10,29 @@
 \rowcolor[HTML]{EFEFEF} 
 \textit{Conjunto 1: Depresión 2018} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-deprimido                           & 135 - 24,483                                 & 79 - 25,967                                  &                                                              \\ \hline
+deprimido                           & \textbf{135} - 24,483                                 & \textbf{79} - 25,967                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-no-deprimido                        & 744 - 98,783                                 & 741 - 272,703                                &                                                              \\ \hline
+no-deprimido                        & \textbf{744} - 98,783                                 & \textbf{741} - 272,703                                &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                      & \textit{879 - 123,266}                       & \textit{820 - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{104,800}} \\ \hline
+\textbf{Total}                      & \textit{\textbf{879} - 123,266}                       & \textit{\textbf{820} - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{104,800}} \\ \hline
 \rowcolor[HTML]{EFEFEF} 
 \textit{Conjunto 2: Depresión 2019} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-deprimido                           & 16 - 5,731                                   & 60 - 18,534                                  &                                                              \\ \hline
+deprimido                           & \textbf{16} - 5,731                                   & \textbf{60} - 18,534                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-no-deprimido                        & 746 - 125,823                                & 10 - 5,011                                   &                                                              \\ \hline
+no-deprimido                        & \textbf{746} - 125,823                                & \textbf{10} - 5,011                                   &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                      & \textit{762 - 131,554}                       & \textit{70 - 23,545}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{118,668}}    \\ \hline
+\textbf{Total}                      & \textit{\textbf{762} - 131,554}                       & \textit{\textbf{70} - 23,545}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{118,668}}    \\ \hline
 \rowcolor[HTML]{EFEFEF} 
 \textit{Conjunto 2: Anorexia}       & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-con anorexia                        & 61-23,335                                    & 73-16,751                                    &                                                              \\ \hline
+con anorexia                        & \textbf{61}-23,335                                    & \textbf{73}-16,751                                    &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-sin-anorexia                        & 411-107,239                                  & 742-254,640                                  &                                                              \\ \hline
+sin-anorexia                        & \textbf{411}-107,239                                  & \textbf{742}-254,640                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                      & \textit{472-130,574}                         & \textit{815-271,391}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{131,264}} \\ \hline
+\textbf{Total}                      & \textit{\textbf{472}-130,574}                         & \textit{\textbf{815}-271,391}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{131,264}} \\ \hline
 \end{tabular}
 
-\end{center}
+}
 
 \end{table}
