--- a/docs/latex/sections/tables/resultados.tex
+++ b/docs/latex/sections/tables/resultados.tex
@@ -1,30 +1,37 @@
 
 \begin{table}[h]
-\caption{Resultados promedio en términos de la métrica F1.} \label{table:resultados}
+\caption{Resultados en términos de la métrica F1, la variable n indica la magnitud del aumento en el conjunto original.} \label{table:resultados}
 
 \begin{center}
 
 \resizebox{\columnwidth}{!}{%
 
-\begin{tabular}{llrrrrrrr}
+\begin{tabular}{lllrlrrrrr}
 \hline
-\multicolumn{2}{l}{\textbf{Conjunto de datos}}               & \multicolumn{1}{l}{\textbf{Bi-LSTM}} & \multicolumn{1}{l}{\textbf{}}    & \multicolumn{1}{l}{\textbf{CNN}} & \multicolumn{1}{l}{\textbf{}}    & \multicolumn{1}{l}{\textbf{SVM}} & \multicolumn{1}{l}{\textbf{SVM-C}}    & \multicolumn{1}{l}{\textbf{Promedio}} \\ \hline
-                   & \textit{Metodo}                         & \multicolumn{1}{l}{\textit{F1}}      & \multicolumn{1}{l}{\textit{std}} & \multicolumn{1}{l}{\textit{F1}}  & \multicolumn{1}{l}{\textit{std}} & \multicolumn{1}{l}{\textit{F1}}  & \multicolumn{1}{l}{\textit{F1}}       & \multicolumn{1}{l}{\textit{F1}}       \\ \hline
-\textit{Depresión} & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}0.50         & \cellcolor[HTML]{C0C0C0}0.02     & \cellcolor[HTML]{C0C0C0}0.47     & \cellcolor[HTML]{C0C0C0}0.06     & \cellcolor[HTML]{C0C0C0}0.16     & \cellcolor[HTML]{C0C0C0}0.50          & \cellcolor[HTML]{C0C0C0}0.41          \\ \hline
-                   & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}0.54         & \cellcolor[HTML]{EFEFEF}0.04     & \cellcolor[HTML]{EFEFEF}0.51     & \cellcolor[HTML]{EFEFEF}0.02     & \cellcolor[HTML]{EFEFEF}0.51     & \cellcolor[HTML]{EFEFEF}0.51          & \cellcolor[HTML]{EFEFEF}0.52          \\ \hline
-                   & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}0.54         & \cellcolor[HTML]{EFEFEF}0.01     & \cellcolor[HTML]{EFEFEF}0.50     & \cellcolor[HTML]{EFEFEF}0.02     & \cellcolor[HTML]{EFEFEF}0.50     & \cellcolor[HTML]{EFEFEF}0.48          & \cellcolor[HTML]{EFEFEF}0.51          \\ \hline
-                   & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}0.53         & \cellcolor[HTML]{EFEFEF}0.03     & \cellcolor[HTML]{EFEFEF}0.52     & \cellcolor[HTML]{EFEFEF}0.00     & \cellcolor[HTML]{EFEFEF}0.53     & \cellcolor[HTML]{EFEFEF}0.50          & \cellcolor[HTML]{EFEFEF}0.52          \\ \hline
-                   & Restrición Chi2                         & \textbf{0.56}                        & 0.01                             & 0.52                             & 0.01                             & \textbf{0.53}                    & 0.50                                  & \textbf{0.53}                         \\ \hline
-                   & Relacion Equivalente                       & 0.54                                 & 0.03                             & \textbf{0.52}                    & 0.02                             & 0.51                             & 0.49                                  & 0.51                                  \\ \hline
-                   & Relacion Contraria                      & 0.51                                 & 0.01                             & 0.52                             & 0.01                             & 0.52                             & \textbf{0.51}                         & 0.51                                  \\ \hline
-\textit{Anorexia}  & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}0.79         & \cellcolor[HTML]{C0C0C0}0.01     & \cellcolor[HTML]{C0C0C0}0.77     & \cellcolor[HTML]{C0C0C0}0.01     & \cellcolor[HTML]{C0C0C0}0.67     & \cellcolor[HTML]{C0C0C0}0.72          & \cellcolor[HTML]{C0C0C0}0.74          \\ \hline
-                   & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}0.80         & \cellcolor[HTML]{EFEFEF}0.02     & \cellcolor[HTML]{EFEFEF}0.80     & \cellcolor[HTML]{EFEFEF}0.02     & \cellcolor[HTML]{EFEFEF}0.77     & \cellcolor[HTML]{EFEFEF}0.75          & \cellcolor[HTML]{EFEFEF}0.78          \\ \hline
-                   & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}0.81         & \cellcolor[HTML]{EFEFEF}0.01     & \cellcolor[HTML]{EFEFEF}0.80     & \cellcolor[HTML]{EFEFEF}0.01     & \cellcolor[HTML]{EFEFEF}0.76     & \cellcolor[HTML]{EFEFEF}0.75          & \cellcolor[HTML]{EFEFEF}0.78          \\ \hline
-                   & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}0.81         & \cellcolor[HTML]{EFEFEF}0.01     & \cellcolor[HTML]{EFEFEF}0.80     & \cellcolor[HTML]{EFEFEF}0.00     & \cellcolor[HTML]{EFEFEF}0.78     & \cellcolor[HTML]{EFEFEF}\textbf{0.78} & \cellcolor[HTML]{EFEFEF}0.79          \\ \hline
-                   & Restrición Chi2                         & 0.80                                 & 0.00                             & \textbf{0.80}                    & 0.02                             & 0.78                             & 0.77                                  & 0.79                                  \\ \hline
-                   & Relacion Equivalente                       & 0.80                                 & 0.02                             & 0.79                             & 0.01                             & 0.78                             & 0.76                                  & 0.78                                  \\ \hline
-                   & Relacion Contraria                      & \textbf{0.83}                        & 0.03                             & 0.79                             & 0.02                             & \textbf{0.81}                    & 0.75                                  & \textbf{0.80}                         \\ \hline
-\end{tabular}
+\textbf{Conjunto de datos} &                                         & \textbf{Bi-LSTM}                       & \multicolumn{1}{l}{}                          & \textbf{CNN}                           & \multicolumn{1}{l}{}                          & \multicolumn{1}{l}{SVM}             & \multicolumn{1}{l}{}                          & \multicolumn{1}{l}{SVM-C}           & \multicolumn{1}{l}{}                          \\ \hline
+                           & \textit{Metodo}                         & \textit{F1}                            & \multicolumn{1}{l}{\textit{n}}                & \textit{F1}                            & \multicolumn{1}{l}{\textit{n}}                & \multicolumn{1}{l}{F1}              & \multicolumn{1}{l}{n}                         & \multicolumn{1}{l}{F1}              & \multicolumn{1}{l}{n}                         \\ \hline
+Depresión 2018             & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}47$\pm$3          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}45$\pm$5          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}16          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}50          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}50$\pm$2          & \cellcolor[HTML]{EFEFEF}3                     & \cellcolor[HTML]{EFEFEF}51$\pm$3          & \cellcolor[HTML]{EFEFEF}6                     & \cellcolor[HTML]{EFEFEF}51          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}51          & \cellcolor[HTML]{EFEFEF}9                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}50$\pm$4          & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}50$\pm$1          & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}50          & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}48          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}48$\pm$6          & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}\textbf{53$\pm$1} & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}\textbf{53} & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}50          & \cellcolor[HTML]{EFEFEF}3                     \\ \hline
+                           & Restrición Chi2                         & \textbf{52$\pm$3}                         & 4                                             & 50$\pm$3                                  & 2                                             & \textbf{53}                         & 10                                            & 50                                  & 1                                             \\ \hline
+                           & Relacion Positiva                       & 51$\pm$5                                  & 8                                             & 50$\pm$1                                  & 9                                             & 41                                  & 8                                             & 49                                  & 1                                             \\ \hline
+                           & Relacion Contraria                      & 46$\pm$3                                  & 9                                             & 49$\pm$1                                  & 10                                            & 52                                  & 8                                             & \textbf{51}                         & 1                                             \\ \hline
+\textit{Depresión 2019}    & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}74$\pm$8          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}81$\pm$3          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}0           & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}50          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}81$\pm$13         & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}85$\pm$3          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}13          & \cellcolor[HTML]{EFEFEF}\textbf{9}            & \cellcolor[HTML]{EFEFEF}\textbf{50} & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}80$\pm$5          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}\textbf{88$\pm$2} & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}10          & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}49          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}74$\pm$10         & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}85$\pm$2          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}10          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}47          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
+                           & Restrición Chi2                         & \textbf{88$\pm$4}                         & 1                                             & 83$\pm$4                                  & 1                                             & 10                                  & 8                                             & 47                                  & 1                                             \\ \hline
+                           & Relacion Positiva                       & 78$\pm$15                                 & 1                                             & \textbf{88$\pm$2}                         & 6                                             & 6                                   & 8                                             & 46                                  & 1                                             \\ \hline
+                           & Relacion Contraria                      & 65$\pm$7                                  & 9                                             & 82$\pm$3                                  & 9                                             & \textbf{31}                         & 4                                             & 15                                  & 5                                             \\ \hline
+\textit{Anorexia}          & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}75$\pm$3          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}80$\pm$0          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}67          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}72          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}\textbf{80$\pm$2} & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}81$\pm$2          & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}77          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}75          & \cellcolor[HTML]{EFEFEF}6                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}\textbf{80$\pm$1} & \cellcolor[HTML]{EFEFEF}8                     & \cellcolor[HTML]{EFEFEF}82$\pm$3          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}76          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}75          & \cellcolor[HTML]{EFEFEF}3                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}78$\pm$2          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}81$\pm$1          & \cellcolor[HTML]{EFEFEF}6                     & \cellcolor[HTML]{EFEFEF}78          & \cellcolor[HTML]{EFEFEF}6                     & \cellcolor[HTML]{EFEFEF}\textbf{78} & \cellcolor[HTML]{EFEFEF}6                     \\ \hline
+                           & Restrición Chi2                         & 79$\pm$2                                  & 5                                             & \textbf{82$\pm$1}                         & 7                                             & 78                                  & 5                                             & 77                                  & 1                                             \\ \hline
+                           & Relacion Positiva                       & 79$\pm$1                                  & 5                                             & \textbf{82$\pm$1}                         & 1                                             & 78                                  & 6                                             & 76                                  & 1                                             \\ \hline
+                           & Relacion Contraria                      & 76$\pm$4                                  & 4                                             & 81$\pm$2                                  & 1                                             & \textbf{81}                         & 8                                             & 75                                  & 5                                             \\ \hline
+\end{tabular}%
 
 }
 \end{center}
